--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,1 @@
-.map {
-  background-image: url(/img/main/scheme-1.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 1100px;
-  height: 777px;
-  position: absolute;
-}
-
+.map{background-image:url(/img/main/scheme-1.jpg);background-repeat:no-repeat;background-size:cover;width:1100px;height:777px;position:absolute}
